# c_couse_notes

./: .gitignore  Codes Indicating.md  Contents of the Chapters.md  README.md  helper.c  helper.h
codility_lessons/: CMakeLists.txt
codility_lessons/src/: CyclicRotation.c  FrogJump.c  NumberOfDiscIntersections.c  OddOccurrencesInArray.c  binary_gap.c  bsort.c  test.c
lesson_06/: CMakeLists.txt  lesson_06.md  lesson_06.txt
lesson_06/src/: power_func.c  type_id_func.cpp
lesson_07/: CMakeLists.txt  lesson_07.md  lesson_07.txt
lesson_07/src/: ascii.txt  check_system_endianness.c  prints_escape_squences.c  writes_ascii_characters.c
lesson_08/: CMakeLists.txt  lesson_8.md  lesson_8.txt
lesson_08/src/: finding_digit_values.c  get_password.c  get_presicion_after_comma.c  gets_number_with_getchar.c  putchar_examples.c  reverse_number.c
lesson_10/: CMakeLists.txt  lesson_10.md  lesson_10.txt
lesson_10/src/: armstrong_numbers_finder.c  quadratic_equation_solver.c
lesson_11/: CMakeLists.txt  lesson_11.md  lesson_11.txt
lesson_11/src/: ctype_exp.c  delay_operation.c  get_hex_and_decimal_input.c  perfect_number_finder.c  prime_numbers_finder.c
lesson_13/: CMakeLists.txt  lesson_13.md  lesson_13.txt
lesson_13/src/: calc_sum_of_series.c  ders_13.c  factorial.c  factorial_look_up_table.c  factorials_table.txt  fibonacci.c  fibonacci_sequence_finder.c  fibonacci_series.txt  find_3rd_order_perfect_numbers.c  find_all_factors.c  find_multipliers.c  for_loop1.c  for_loop2.c  for_loop_with_funcs.c  perfect_numbers_with_loops.c  plots_random_numbers.c  plots_random_numbers_dynamically.c  recursive_01.c  recursive_and_iterative_power_func.c  recursive_factroial.c  unique_numbers.c  unique_numbers_finder.c
lesson_15/: CMakeLists.txt  lesson_15.md  lesson_15.txt
lesson_15/src/: func_like_macros_02.c  function_like_macros_01.c
lesson_16/: CMakeLists.txt  lesson_16.md  lesson_16.txt
lesson_16/src/: main.c  predifined_symbolic_constants_01.c
lesson_17/: CMakeLists.txt  lesson_17.txt
lesson_17/src/: mt_impl_01.c
lesson_19/: CMakeLists.txt  lesson_19.md  lesson_19.txt
lesson_19/src/: ders19.c  linear_searching_imp.c
lesson_20/: CMakeLists.txt  lesson_20.txt
lesson_20/src/: array_name_and_iter_variable_usage.c  binary_search.c  bubble_sort_2.c  buble_short_1.c  find_mod_value_of_arrays.c  generating_random_numbers.c  merge_algorithm.c  qsort_implementation.c  sizeof_strings.c  step_by_step_bubble_sort_implement.c  strings_1.c
lesson_21/: CMakeLists.txt  lesson_21.txt
lesson_21/src/: count_characters_in_text.c  counts_all_character_numbers_in_text.c  is_text_polindrom.c  reverse_text.c  reverse_with_swap.c
lesson_22/: CMakeLists.txt  lesson_22.md  lesson_22.txt
lesson_22/src/: call_by_ref.c  call_by_val.c  typed_id_.cpp
lesson_23/: CMakeLists.txt  lesson_23.md  lesson_23.txt
lesson_23/src/: const_semantics.c  ptr_aritmetics.c  static_keyword.c
lesson_24/: CMakeLists.txt  lesson_24.md  lesson_24.txt
lesson_24/src/: array_traversal.c  compairing_address_of_arr.c  reverse_array.c  reverse_copy_array.c  std_dev_mean_max_min_array.c
lesson_26/: CMakeLists.txt  NULL_Pointer.txt  lesson_26.txt
lesson_26/includes/: search.h
lesson_26/src/: main.cpp  search.c
lesson_27/: CMakeLists.txt  lesson_27.md  lesson_27.txt
lesson_27/src/: puts_function.c  rputs_function.c  rstrchr_function.c  strcat_function.c  strchr_function.c  strcpy_function.c  strlen_function.c  strlen_sizeof.c  strstr_function.c
lesson_28/: CMakeLists.txt  lesson_28.md  lesson_28.txt
lesson_28/includes/: locale_test.h
lesson_28/src/: locale_test.c  locale_test_main.c  main.c
lesson_29/: CMakeLists.txt  lesson_29.md
lesson_29/src/: character_manipulations_in_pnames.c  check_is_all_characters_unique.c  define_array_size.c  defining_ptr_array.c  display_rand_pnames.c  endianness.c  endianness_with_binary.c  endianness_with_hex.c  find_name_in_pnames.c  return_string.c  string_address_manipulation.c  string_tokenizing.c
lesson_30/: CMakeLists.txt  lesson_30.md
lesson_30/src/: converts_int_to_string.c  indicate_as_bin_hex_dec.c  pointer_swap.c  pointer_to_pointer_1.c  pointer_to_pointer_2.c  recursive_int_to_string.c  sort_strings.c  string_manipulation.c  string_to_double.c  strtok_with_atof.c
lesson_31/: CMakeLists.txt  lesson_31.md
lesson_31/src/: error_test.c  fill_array_w_memset.c  memchr_exp.c  memcpy_exp_1.c  memcpy_exp_w_malloc.c  memcpy_w_strings.c  memmove_exp.c  memmove_str_prepend_exp.c  memset_fill_array.c  memset_func.c  my_memcpy_func.c  my_memset_func.c  my_strtok_func.c  strtok_with_files.c  test_matrix.c  working_of_memset.c
lesson_32/: CMakeLists.txt  lesson_32.md
lesson_32/src/: bsearch_impl.c  function_address_pointer.c  generic_sort.c  generic_sort_01.c  qsort_impl.c  qsort_impl_01.c
lesson_33/: CMakeLists.txt  lesson_33.md
lesson_33/src/: assert_macro.c  atexit_termination.c  normal_termination.c  normal_termination_exit.c
lesson_34/: CMakeLists.txt  lesson_34.md
lesson_34/src/: generate_rand_2d_hibrit_matrix.c  generate_rand_2d_matrix.c  generate_rand_2d_solid_array.c  generate_random_password.c  get_allocated_memory.c  realloc_func_usage.c  strdup_imp.c  string_concatenate.c
lesson_35/: CMakeLists.txt  lesson_35.md
lesson_35/src/: generate_log_file_name.c  strtok_usage.c  urand_impl.c
lesson_36/: CMakeLists.txt  lesson_36.md
lesson_36/src/: complex_numbers.c  display_current_time.c  get_passed_time.c  print_second.c  structs_and_funcs_1.c  test.c  test.h  test_main.c  thread_exp.c
lesson_37/: CMakeLists.txt  lesson_37.md
lesson_37/includes/: date.h  nutility.h  student.h
lesson_37/src/: main.c  nutility.c  student.c
lesson_39/: CMakeLists.txt  lesson_39.md
lesson_39/src/: bitwise_not.c  bitwise_shift_1.c  test.c
lesson_40/: CMakeLists.txt  lesson_40.md
lesson_40/src/: check_given_number.c  print_bits_func.c  print_hex_bits.c  prints_bits_2.c  prints_bits_functions.c  random_set_reset_2.c  random_set_reset_bits.c  test01.c  test02.c  test03.c  test04.c  uretim_kritik_01.c  uretim_kritik_02.c  uretim_kritik_03.c  (+3 more)
(+65 files in other folders)
